[package]
name = "loop"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package allows for processing iterators in parallel."
documentation = "https://docs.rs/loop"
homepage = "https://github.com/stainless-steel/loop"
repository = "https://github.com/stainless-steel/loop"
categories = ["algorithms"]
keywords = ["parallel"]

[features]
asynchronous = ["futures", "tokio", "tokio-stream"]

[dependencies]
futures = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
